browser/scss/directives/navbar.scss
navbar {

  /* display: block;
  background: white;
  border-bottom: 1px solid black;
  box-shadow: 1px 1px 14px -3px black; */

  .container {
    width: 91%;
    max-width: 1340px;
    padding-top: 20px;
  }

  fullstack-logo {
    margin-top: 5px;
    margin-right: 20px;
    width: 40px;
  }

  a {
    color: black;
    font-size: 16px;
  }

  .nav > li > a {
    cursor: pointer;
    transition: color 0.2s;
    &.active {
      color: darken(#f31214, 10%);
    }
    &:hover {
      background: none;
      color: #f31214;
    }
    &:focus {
      background: none;
    }
  }

  .login-button {
    float: right;
    border: 1px solid black;
    margin-top: 10px;
    background: none;
    outline: none !important;
  }

  .welcome {
    float: right;
    margin-top: 12px;
    span {
      color: black;
      font-size: 16px;
      margin-right: 5px;
    }
    a {
      color: #f30046;
      cursor: pointer;
    }
  }

}

